--- a/src/main/resources/static/cabinet.html
+++ b/src/main/resources/static/cabinet.html
@@ -73,8 +73,8 @@
           <div class="languages-icon"></div>
           <select class="languages__select">
             <option value="ru">RU</option>
-            <option value="en">RU</option>
-            <option value="ch">RU</option>
+            <option value="en">EN</option>
+            <option value="ch">CH</option>
           </select>
         </div>
         <button class="exit"></button>
@@ -386,7 +386,7 @@
   <!-- ГАЛЕРЕЯ ТРЕЙДЕРОВ -->
 
     <div class="card-section hidden">
-      <div class="card-section__card card">
+      <div class="card-section__card card hidden">
         <div class="card__avatar"></div>
         <div class="card__name">Nickolay Sokolov</div>
         <button class="card__more">Подробнее</button>
@@ -538,14 +538,17 @@
 
     </main>
   </div>
-  <script src="js/cabinet.js"></script>
+  <script src="js/local.js"></script>
 
-  <script
-    src="http://code.jquery.com/jquery-3.3.1.js" 
-    integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
-    crossorigin="anonymous">
+
   </script>
+  <script
+  src="http://code.jquery.com/jquery-3.3.1.js"
+  integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
+  crossorigin="anonymous">
   <script src="js/rotate_card.js"></script>
   <script src="js/range.js"></script>
+  <script src="js/cabinet.js"></script>
+
 </body>
 </html>
